# Palantir

./: .clang-format  .clang-tidy  .clangchecklist  .env  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Info.plist  README.md  app.entitlements  cMakeLists.txt  cef_cmake.cmake  conanfile.txt  diff.txt  exception-report.ps1  sonar-project.properties  struct.py
application/: CMakeLists.txt
application/include/command/: command_factory.hpp  stop_command.hpp
application/include/config/: desktop_config.hpp
application/include/exception/: application_exceptions.hpp  window_exceptions.hpp
application/include/input/: input_factory.hpp  key_config.hpp  key_mapper.hpp
application/include/platform/: application.hpp
application/include/platform/macos/: platform_application.hpp
application/include/platform/windows/: platform_application.hpp
application/include/signal/: signal.hpp
application/include/window/: window_manager.hpp
application/src/: main.cpp
application/src/command/: show_command.cpp
application/src/input/: key_config.cpp
application/src/platform/macos/: platform_application.mm
application/src/platform/windows/: platform_application.cpp
application/src/signal/: signal_factory.cpp
application/src/window/: overlay_window.cpp
application/tests/: CMakeLists.txt
palantir-core/: CMakeLists.txt
palantir-core/cmake/: install-palantir-deps.cmake  palantir-common-source.cmake
palantir-core/cmake/platform/: palantir-macos.cmake  palantir-windows.cmake
palantir-core/include/: application.hpp  core_export.hpp
palantir-core/include/client/: sauron_register.hpp
palantir-core/include/command/: command_factory.hpp  icommand.hpp  show_command.hpp
palantir-core/include/concept/: config_concept.hpp  input_concept.hpp  signal_concept.hpp
palantir-core/include/config/: config.hpp  desktop_config.hpp
palantir-core/include/exception/: base_exception.hpp  config_exceptions.hpp  exceptions.hpp  input_exceptions.hpp  plugin_exceptions.hpp  traceable_exception.hpp
palantir-core/include/input/: configurable_input.hpp  iinput.hpp  iinput_factory.hpp  input_factory.hpp  key_config.hpp  key_mapper.hpp  key_register.hpp  keyboard_input.hpp  keyboard_input_factory.hpp
palantir-core/include/plugin/: iplugin.hpp
palantir-core/include/signal/: input_signal.hpp  isignal.hpp  isignal_factory.hpp  isignal_manager.hpp  keyboard_input_signal_factory.hpp  keyboard_signal_factory.hpp  keyboard_signal_manager.hpp  signal.hpp  signal_factory.hpp  signal_manager.hpp
palantir-core/include/utils/: auto_command_register.hpp  resource_utils.hpp  string_utils.hpp  time_utils.hpp
palantir-core/include/window/: iwindow.hpp  overlay_window.hpp  window_manager.hpp
palantir-core/include/window/component/: content_manager.hpp  content_manager_impl.hpp  icontent_manager.hpp  icontent_size_observer.hpp
palantir-core/src/: application.cpp
palantir-core/src/client/: sauron_register.cpp
palantir-core/src/command/: command_factory.cpp  stop_command.cpp
palantir-core/src/input/: input_factory.cpp  key_config.cpp  key_mapper.cpp  key_register.cpp  keyboard_input_factory.cpp
palantir-core/src/platform/windows/: platform_application.cpp
palantir-core/src/signal/: input_signal.cpp  keyboard_input_signal_factory.cpp  keyboard_signal_factory.cpp  keyboard_signal_manager.cpp  signal.cpp  signal_factory.cpp
palantir-core/src/utils/: resource_utils.cpp
palantir-core/src/window/: window_manager.cpp
palantir-core/src/window/component/: logger_strategy.cpp  message_handler.cpp
palantir-core/tests/: CMakeLists.txt
palantir-core/tests/client/: sauron_register_test.cpp
palantir-core/tests/command/: command_factory_test.cpp
palantir-core/tests/input/: configurable_input_test.cpp  input_factory_test.cpp  key_config_test.cpp  key_mapper_test.cpp  key_register_test.cpp  keyboard_input_factory_test.cpp  keyboard_input_test.cpp
palantir-core/tests/mock/: mock_application.hpp  palantir_mock.hpp  windows_keyboard_api_mock.hpp
palantir-core/tests/mock/client/: mock_sauron_client.hpp  mock_sauron_register.hpp
palantir-core/tests/mock/command/: mock_command.hpp  mock_command_factory.hpp
palantir-core/tests/mock/input/: mock_configurable_input.hpp  mock_input_factory.hpp  mock_key_config.hpp  mock_key_register.hpp  mock_keyboard_input.hpp  mock_keyboard_input_factory.hpp
palantir-core/tests/mock/signal/: mock_signal.hpp  mock_signal_factory.hpp
palantir-core/tests/mock/window/: mock_window.hpp  mock_window_manager.hpp
palantir-core/tests/signal/: input_signal_test.cpp  keyboard_input_signal_factory_test.cpp  keyboard_signal_factory_test.cpp  keyboard_signal_manager_test.cpp  keyboard_signal_manager_windows_test.cpp  signal_factory_test.cpp  signal_manager_test.cpp  signal_manager_windows_test.cpp  signal_test.cpp
palantir-core/tests/utils/: resource_utils_test.cpp  string_utils_test.cpp
palantir-core/tests/window/: window_manager_test.cpp
palantir-core/tests/window/component/: content_manager_test.cpp
plugin-loader/: CMakeLists.txt
plugin-loader/include/plugin_loader/: iplugin.hpp  plugin_loader.hpp  plugin_manager.hpp
plugin-loader/src/: plugin_loader.cpp  plugin_manager.cpp
plugin-loader/src/platform/macos/: plugin_loader.cpp  plugin_manager.cpp
plugin-loader/src/platform/windows/: plugin_loader.cpp  plugin_manager.cpp
plugin-loader/src/plugin_loader/: plugin_loader.cpp  plugin_manager.cpp
plugins/commands/: CMakeLists.txt
plugins/commands/include/: plugin_export.hpp
plugins/commands/include/command/: clear_screenshot_command.hpp  commands_plugin.hpp  send_sauron_request_command.hpp  show_command.hpp  stop_command.hpp  toggle_transparency_command.hpp  toggle_window_anonymity_command.hpp  window_screenshot_command.hpp
plugins/commands/include/prompt/: prompts.hpp
plugins/commands/src/command/: clear_screenshot_command.cpp  commands_plugin.cpp  send_sauron_request_command.cpp  show_command.cpp  stop_command.cpp  toggle_transparency_command.cpp  toggle_window_anonymity_command.cpp  (+1 more)
plugins/commands/tests/: CMakeLists.txt  main_test.cpp
(+215 files in other folders)
